tests/fixtures/errors/block_expr_removed.chisa
fn compute(x: number): number = {
    let tmp = x * x
    tmp + 1
}
